# fitness-app

./: .editorconfig  .gitignore  CLAUDE.md  CURRENT-STATE.md  DESIGN-BRIEF.md  README.md  TODO.md  design-system.md  docker-compose.yml
apps/api/: .env.example  Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260525_0002_auth.py  20260525_0003_exercises.py  20260526_0005_programs.py  20260526_0006_scheduling.py  20260526_0007_notifications.py  20260526_0008_recommendations.py  20260526_0009_rpe_progression.py  20260527_0012_insights_v2.py  20260527_0013_foods.py  20260527_0016_fitbit_push.py  20260602_0017_body_metrics_circumference.py  20260602_0017_idempotency_ttl_index.py  20260602_0017_insight_ttl_dismiss.py  20260607_0018_fitbit_needs_reauth.py  20260610_0019_drop_legacy_fitbit.py  20260610_0019_drop_meal_photo_url.py  (+19 more)
apps/api/app/: config.py  db.py  deps.py  logging_config.py  main.py
apps/api/scripts/: fetch_exercises_seed.sh  seed_exercises.py  seed_programs.py  verify_fatsecret.py
apps/api/tests/: _scheduling_helpers.py  conftest.py  test_account_deletion.py  test_ai_rationale_pipeline.py  test_analytics_volume.py  test_auth_flow.py  test_auth_verifiers.py  test_body_metrics_trend.py  test_exercise_analytics.py  test_exercises_api.py  test_exercises_seed.py  test_fatsecret_client.py  test_fatsecret_relabel_migration.py  test_fitbit_integration.py  test_food_ingest.py  test_food_url_parse.py  test_foods_api.py  test_foods_fatsecret_api.py  test_health_integration.py  test_idempotency_ttl.py  test_insights_ttl_dismiss.py  test_list_pagination.py  test_me_export.py  test_me_prs.py  test_meal_logging.py  test_meal_logging_migration.py  test_meal_photo_recognition.py  test_meal_plans_migration.py  test_meal_plans_structured.py  test_meals_api.py  test_observability.py  test_periodization_toggle.py  test_program_block_kind.py  test_program_builder_api.py  test_program_rotation_api.py  test_program_slots_api.py  test_program_start_session_api.py  test_program_templates_api.py  test_programs_api.py  test_progression_orchestrator.py  (+14 more)
docs/: ci.md
(+813 files in other folders)
