[project]
name = "gym-api"
version = "0.1.0"
description = "Gym app FastAPI backend"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "python-jose[cryptography]>=3.3",
    "arq>=0.26",
    "httpx>=0.28",
    "beautifulsoup4>=4.12",
    "greenlet>=3.5.1",
    "uuid6>=2025.0.1",
    "google-auth>=2.53.0",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "python-multipart>=0.0.9",
    "redis>=5.0",
    "pynacl>=1.5",
    "prometheus-client>=0.20",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "testcontainers[postgres]>=4.8",
    "ruff>=0.8",
    "black>=24.10",
    "mypy>=1.13",
    "types-python-jose>=3.3",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "N",
    "SIM",
    "ASYNC",
]
ignore = [
    "E501",
    # FastAPI Depends() / Query() etc. in defaults is idiomatic.
    "B008",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions/"]

[[tool.mypy.overrides]]
module = ["testcontainers.*", "jose.*", "opentelemetry.*", "prometheus_client.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:testcontainers.*",
]
